--- a/index.html
+++ b/index.html
@@ -3,12 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PROJECT TUBO</title>
+    <title>PROJECT BMS</title>
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <link rel="shortcut icon" href="./styles/static/LRC.jpg" type="image/x-icon">
 </head>
 <body>
+
+    <div class="loading-screen" id="loading">
+        <div class="container">
+            <img src="./styles/static/loading.gif" alt="">
+            <p id="loading-msg">Requesting data!</p>
+            <button class="loadingclose" id="loadingclose">Close</button>
+        </div>
+    </div>
+
+    <div class="imgPreview" id="ImagePreview">
+        <div class="container">
+            <div class="closebutton" id="imgprev">
+                <span class="material-symbols-outlined">
+                    close
+                </span>
+            </div>
+            <h2>TUBO 1</h2>
+            <div class="img-container">
+                <div class="control" id="prev">
+                    <span class="material-symbols-outlined">
+                        arrow_back_ios
+                    </span>
+                </div>
+                <div class="img-wrapper">
+                    <img src="./styles/static/noimg.jpg" alt="">
+                </div>
+                <div class="control" id="next">
+                    <span class="material-symbols-outlined">
+                        arrow_forward_ios
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="sidedata" id="sidedata"></div>
 
     <div class="sideinfo" id="sideinfo"></div>
@@ -47,7 +82,6 @@
             <p>Online</p>
         </div>
     </div>
-    
     <div class="sineg-map" id="mapfunction"></div>
     <script src="scripts/map-function.js"></script>
 </body>
